# data_extraction

./: .gitignore  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt
extractor/: api_views.py  models.py  urls.py  views.py  views_old.py
extractor/management/commands/: loadsendigdomains.py
extractor/migrations/: 0001_initial.py
extractor/services/: data_extractor.py  domain_detector.py  llm_service.py  pdf_service.py  python_data_extractor.py  python_domain_detector.py  python_service.py  xpt_generator.py  xpt_generator_enhanced.py
extractor/templates/: home.html
extractor/templates/extractor/: base.html  detect_domains.html  domain_detection.html  domain_selection.html  processing.html  results.html  upload.html  validation_report.html  view_xpt.html
sendig/: asgi.py  settings.py  urls.py  wsgi.py
